# portfolio-linux-app-gtk

./: README.md  com.alokparna.portfolio.gtk.json  meson.build  org.alokparna.portfolio.gtk.json
data/: com.alokparna.portfolio.gtk.desktop.in  com.alokparna.portfolio.gtk.gschema.xml  com.alokparna.portfolio.gtk.metainfo.xml.in  com.alokparna.portfolio.gtk.service.in  meson.build  org.alokparna.portfolio.gtk.desktop.in  org.alokparna.portfolio.gtk.gschema.xml  org.alokparna.portfolio.gtk.metainfo.xml.in  org.alokparna.portfolio.gtk.service.in
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: about-page.c  about-page.h  about-page.ui  hero-page.c  hero-page.h  hero-page.ui  hero.css  linkedin_logo.xml  main.c  meson.build  portfolio-about-page.c  portfolio-about-page.h  portfolio-about-page.ui  portfolio-achievement-card.c  portfolio-achievement-card.h  portfolio-achievement-card.ui  portfolio-achievement-row.c  portfolio-achievement-row.h  portfolio-achievement-row.ui  portfolio-achievements-page.c  portfolio-achievements-page.h  portfolio-achievements-page.ui  portfolio-additional-expertise-card.c  portfolio-additional-expertise-card.h  portfolio-additional-expertise-card.ui  portfolio-contact-page.c  portfolio-contact-page.h  portfolio-contact-page.ui  portfolio-data.c  portfolio-data.h  portfolio-education-page.c  portfolio-education-page.h  portfolio-education-page.ui  portfolio-education-row.c  portfolio-education-row.h  portfolio-education-row.ui  portfolio-experience-card.c  portfolio-experience-card.h  portfolio-experience-card.ui  portfolio-experience-page.c  (+29 more)
